# guess-game-deepseek-r1

./: LICENSE.txt  README.md
guess-game-be/: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  test-nvidia.py  test-ollama.py
guess-game-be/app/: main.py
guess-game-be/app/api/: main.py
guess-game-be/app/api/routes/: guess.py
guess-game-be/app/core/: config.py
guess-game-be/app/core/chain/: completion.py  prompts.py
guess-game-be/app/core/models/: chat_history_response.py  completion_response.py  generic.py  guess_request.py
guess-game-be/app/core/utils/: chat.py
guess-game-be/app/db/: redis.py
guess-game-be/test/: config.py  main.py
guess-game-be/test/chain/: completion.py  prompts.py
guess-game-be/test/models/: completion_response.py  guess.py
guess-game-be/test/utils/: chat.py  log.py
guess-game-fe/: eslint.config.mjs  package-lock.json  package.json
guess-game-fe/src/: config.ts  middleware.ts
guess-game-fe/src/app/: globals.css  layout.tsx  page.tsx
guess-game-fe/src/app/api/internal/[...slug]/: route.ts
guess-game-fe/src/components/kitty-cat/: index.tsx
guess-game-fe/src/components/menu/: index.tsx
guess-game-fe/src/components/ui/: button.tsx  sonner.tsx
guess-game-fe/src/data/: sprites.ts
guess-game-fe/src/lib/: csrf-token.ts  get-query-client.ts
guess-game-fe/src/providers/: index.tsx
guess-game-fe/src/sections/Home/: hooks.ts  index.tsx
guess-game-fe/src/types/: generic-response.ts  options.ts  response.ts
